@@ -1,6 +1,8 @@
 Вер.2.0.5:
 + добавлен нижний край к тултипу (#30)
+* исправлен баг с обновлением сетевого интерфейса
 * исправлен баг с тултипом батареи
+* отредактирована разметка DP (#31)
 
 Вер.2.0.4:
 * более корректная работа с батареями
