@@ -1,9 +1,5 @@
 post_install() {
   kbuildsycoca4 > /dev/null 2>&1
-  cat << __EOF
-    To migrate to version 2.* and newer see this article:
-    http://arcanis.name/en/2014/09/04/migration-to-v2/
-__EOF
 }
 
 post_upgrade() {
